--- a/www/index.html
+++ b/www/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello Neutralinojs</title>
-    <style>
-      body { background-color: white; }
-    </style>
+    <link rel="stylesheet" ref="style.css" />
   </head>
-  <body>
+  <body class="body">
     It works 🚀
     <script src="/neutralino.js"></script>
   </body>
