stylesheet is added separately

--- a/www/index.html
+++ b/www/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello Neutralinojs</title>
-    <link rel="stylesheet" ref="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body class="body">
     It works 🚀
     <script src="/neutralino.js"></script>
   </body>
 </html>
+
